--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "python.formatting.provider": "autopep8",
-    "python.pythonPath": "/home/sudhanva/anaconda3/envs/slpy/bin/python"
+    "python.pythonPath": "C:\\Users\\Sudhanva Lalit\\anaconda3\\envs\\slpy\\python.exe"
 }
